Add responsive FAQ section with accordion functionality and new assets

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
   </head>
   <body>
     <main>
-      <img src="./Assets/Group 4.png" alt="" class="absoluteimg" />
+      <div class="relative">
+        <img src="./Assets/Group 4.png" alt="" class="absoluteimg" />
+        <img
+          src="./Assets/faq-title-bg 2.png"
+          alt=""
+          class="absoluteimg__bigger"
+        />
+      </div>
       <div class="h1container"><h1>Frequently Asked Questions</h1></div>
       <section class="flex flex-col gap-40 mb-80 items-center">
         <div class="h2container flex flex-col gap-12">
@@ -24,9 +31,9 @@
             together!
           </p>
         </div>
-        <nav class="flex flex-col gap-24">
+        <nav>
           <ul class="flex gap-24">
-            <li class="list-item"><a href="">Overwiew</a></li>
+            <li class="active-item"><a href="">Overwiew</a></li>
             <li class="list-item"><a href="">Design System</a></li>
           </ul>
           <ul class="flex gap-24">
@@ -35,72 +42,91 @@
           </ul>
         </nav>
       </section>
-      <section>
-        <div class="container__accord">
-          <div class="flex justify-between">
-            <h3>How does it work?</h3>
-            <img src="./Assets/Vector 9.svg" alt="" />
+      <section class="accordion__section flex flex-col gap-20">
+        <div class="opened__container">
+          <div class="container__accord">
+            <div class="flex justify-between open__accord">
+              <h3>How does it work?</h3>
+              <img src="./Assets/Vector 9.svg" alt="" class="arrow_down" />
+              <img src="./Assets/Vector 9_2.svg" alt="" class="arrow_up" />
+            </div>
+            <p class="accordp">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste
+              praesentium quia debitis aperiam molestias tenetur odit saepe
+              laudantium accusantium a.
+            </p>
           </div>
-          <p class="accordp">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste
-            praesentium quia debitis aperiam molestias tenetur odit saepe
-            laudantium accusantium a.
-          </p>
         </div>
-        <div class="container__accord">
-          <div class="flex justify-between">
-            <h3>Which platform do you support?</h3>
-            <img src="./Assets/Vector 9.svg" alt="" />
+        <div class="ready__container">
+          <div class="container__accord">
+            <div class="flex justify-between open__accord">
+              <h3>Which platform do you support?</h3>
+
+              <img src="./Assets/Vector 9_2.svg" alt="" class="arrow_up_rdy" />
+            </div>
+            <p class="ready__accord">
+              In a situational interview, the interviewer may ask how you
+              overcame a difficult situation and what you learned from it. You
+              can use your response to demonstrate your flexibility and share an
+              example of how you transformed a negative experience into a
+              positive outcome
+            </p>
           </div>
-          <p>
-            In a situational interview, the interviewer may ask how you overcame
-            a difficult situation and what you learned from it. You can use your
-            response to demonstrate your flexibility and share an example of how
-            you transformed a negative experience into a positive outcome
-          </p>
         </div>
-        <div class="container__accord">
-          <div class="flex justify-between">
-            <h3>How do I invite my teammates?</h3>
-            <img src="./Assets/Vector 9.svg" alt="" />
+        <div class="ready__container">
+          <div class="container__accord">
+            <div class="flex justify-between open__accord">
+              <h3>How do I invite my teammates?</h3>
+
+              <img src="./Assets/Vector 9_2.svg" alt="" class="arrow_up_rdy" />
+            </div>
+            <p class="ready__accord">
+              Collect the contact information of your teammates, including their
+              email addresses or usernames on the platform you will use.
+            </p>
           </div>
-          <p>
-            Collect the contact information of your teammates, including their
-            email addresses or usernames on the platform you will use.
-          </p>
         </div>
-        <div class="container__accord">
-          <div class="flex justify-between">
-            <h3>Do you have annual plan?</h3>
-            <img src="./Assets/Vector 9.svg" alt="" />
+        <div class="opened__container">
+          <div class="container__accord">
+            <div class="flex justify-between open__accord">
+              <h3>Do you have annual plan?</h3>
+              <img src="./Assets/Vector 9.svg" alt="" class="arrow_down" />
+              <img src="./Assets/Vector 9_2.svg" alt="" class="arrow_up" />
+            </div>
+            <p class="accordp">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione
+              distinctio modi soluta iusto quos odit.
+            </p>
           </div>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione
-            distinctio modi soluta iusto quos odit.
-          </p>
         </div>
-        <div class="container__accord">
-          <div class="flex justify-between">
-            <h3>How to create new workspace</h3>
-            <img src="./Assets/Vector 9.svg" alt="" />
+        <div class="opened__container">
+          <div class="container__accord">
+            <div class="flex justify-between open__accord">
+              <h3>How to create new workspace</h3>
+              <img src="./Assets/Vector 9.svg" alt="" class="arrow_down" />
+              <img src="./Assets/Vector 9_2.svg" alt="" class="arrow_up" />
+            </div>
+            <p class="accordp">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+              doloremque ipsa, quaerat illo magni iure nisi sunt quas optio vel
+              qui tenetur praesentium asperiores beatae expedita quae quo omnis
+              vitae incidunt. Excepturi aliquid ipsa obcaecati, laboriosam
+              laudantium quasi eveniet nulla.
+            </p>
           </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-            doloremque ipsa, quaerat illo magni iure nisi sunt quas optio vel
-            qui tenetur praesentium asperiores beatae expedita quae quo omnis
-            vitae incidunt. Excepturi aliquid ipsa obcaecati, laboriosam
-            laudantium quasi eveniet nulla.
-          </p>
         </div>
-        <div class="container__accord">
-          <div class="flex justify-between">
-            <h3>How do I set roles & permissions?</h3>
-            <img src="./Assets/Vector 9.svg" alt="" />
+        <div class="opened__container">
+          <div class="container__accord">
+            <div class="flex justify-between open__accord">
+              <h3>How do I set roles & permissions?</h3>
+              <img src="./Assets/Vector 9.svg" alt="" class="arrow_down" />
+              <img src="./Assets/Vector 9_2.svg" alt="" class="arrow_up" />
+            </div>
+            <p class="accordp">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Voluptate, pariatur.
+            </p>
           </div>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate,
-            pariatur.
-          </p>
         </div>
       </section>
     </main>
